fix: change cta url

--- a/src/_includes/sections/footer.njk
+++ b/src/_includes/sections/footer.njk
@@ -11,7 +11,7 @@
             </div>
 
             <!-- CTA BUTTON -->
-            <a href="https://rezervace.tanecnistudioka.cz/" target="_blank" class="btn btn-xl">
+            <a href="https://tanecni-studio-ka-z-s.reservio.com/" target="_blank" class="btn btn-xl">
               Rezervace
             </a>
         </div>
