fix: cta target _blank

--- a/src/_includes/sections/reviews.njk
+++ b/src/_includes/sections/reviews.njk
@@ -15,7 +15,7 @@
             </div>
 
             <!-- CTA -->
-            <a href="{{ reviews.ctaUrl }}" class="btn">{{ reviews.cta }}</a>
+            <a href="{{ reviews.ctaUrl }}" target="_blank" class="btn">{{ reviews.cta }}</a>
         </div>
 
         <!-- REVIEWS -->
