--- a/src/_includes/sections/footer.njk
+++ b/src/_includes/sections/footer.njk
@@ -100,7 +100,12 @@
                         aria-hidden="true"
                         draggable="false">
 
-                    <p class="text-xl text-white font-medium">Tanec srdcem, růst s vášní!</p>
+                    <!-- MOTTO + IČO -->
+                    <div class="flex flex-col gap-2">
+                        <p class="text-xl text-white font-medium">Tanec srdcem, růst s vášní!</p>
+
+                        <span class="text-sm text-stone-300">IČO: {{ client.ico }}</span>
+                    </div>
                 </div>
 
                 <!-- MISC LINKS -->
