--- a/src/_includes/pages/contact.njk
+++ b/src/_includes/pages/contact.njk
@@ -41,7 +41,7 @@
                     <p class="xl:max-w-3xl ~text-sm/base text-stone-800 dark:text-stone-200">{{ contentOne.text }}</p>
 
                     <!-- EMAIL + PHONE -->
-                    <ul class="flex max-sm:flex-col ~gap-4/12">
+                    <ul class="flex xl:flex-wrap max-sm:flex-col gap-y-4 ~gap-x-4/12">
                         {% for item in contentOne.items %}
                             <li class="flex items-center gap-4">
                                 <!-- ICON -->
@@ -60,13 +60,18 @@
 
                                 <div class="flex flex-col gap-0.5">
                                     <span class="~text-sm/base text-stone-800 dark:text-stone-200 font-medium">{{ item.title }}</span>
-                                    <a
-                                        href="{{ item.href }}"
-                                        class="relative ~text-base/lg text-black dark:text-white font-medium
-                                        before:absolute before:-bottom-0.5 before:left-0 before:h-0.5 before:w-full before:bg-black
-                                        before:transition-transform before:duration-300 before:scale-x-0 before:origin-left hover:before:scale-x-100">
-                                        {{ item.text }}
-                                    </a>
+
+                                    {% if item.href %}
+                                        <a
+                                            href="{{ item.href }}"
+                                            class="relative ~text-base/lg text-black dark:text-white font-medium
+                                            before:absolute before:-bottom-0.5 before:left-0 before:h-0.5 before:w-full before:bg-black dark:before:bg-white
+                                            before:transition-transform before:duration-300 before:scale-x-0 before:origin-left hover:before:scale-x-100">
+                                            {{ item.text }}
+                                        </a>
+                                    {% else %}
+                                        <span class="~text-base/lg text-black dark:text-white font-medium">{{ item.text }}</span>
+                                    {% endif %}
                                 </div>
                             </li>
                         {% endfor %}
