--- a/src/_includes/pages/courses/spolecensky-tanec-pokracovaci.njk
+++ b/src/_includes/pages/courses/spolecensky-tanec-pokracovaci.njk
@@ -46,7 +46,7 @@
                 </div>
 
                 <!-- CTA -->
-                <a href="{{ contentOne.ctaUrl }}" target="_blank" class="btn self-start">{{ contentOne.cta }}</a>
+                <a href="{{ pageContent.data.cta.url }}" target="{{ pageContent.data.cta.target }}" class="btn self-start">{{ pageContent.data.cta.text }}</a>
             </div>
         </div>
     </section>
